[tool.poetry]
name = "pmkg-jyuusu"
version = "0.1.0"
description = "A dependency injection framework for Python inspired by Google's Guice and Dagger 2"
authors = ["Pramook Khungurn <pramook@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "jyuusu", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
